[package]
name = "benches"
version = "0.1.0"
authors = ["Samuel Kyletoft <skyletoft@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"doubly_linked_list" = {path = "/home/skyletoft/git/containers/doubly_linked_list"}
"rand" = "0.8.0"